style.css
/* ... */
/* #functions-benefits-container {
    display: flex;
    flex-direction: row;
    
}
#functions-benefits-container img {
    width: 50%;
    height: 50%;
} */

/* overall style */
table {
    width: 80%;
    border-collapse: collapse;
    margin: 20px 0;
    font-size: 18px;
    text-align: left;
}

th, td {
    border: 1px solid #D09F5A;
    padding: 8px;
}

th {
    background-color: #f2f2f2;
    color: #333;
}

/* Desktop view */
@media (min-width: 768px) {
    table {
        font-size: 18px;
        
    }
}

/* Mobile view */
@media (max-width: 767px) {
    table {
        font-size: 14px;
        width: 100%;
        margin: 25px 0;
    }

    th, td {
        padding: 12px 8px;
    }
    #line-logo {
        width: 25px;
        height: 25px;
        border-radius: 50%;
        position: fixed;
        bottom: 0;
        left: 10px;
        }
        #facebook-logo {
            width: 25px;
            height: 25px;
            border-radius: 50%;
            position: fixed;
            bottom: 200px;
            left: 15px;
            }
    
}

.support-container h2 {
    margin-bottom: 25px;
}





#carousel-container {

    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;

}
.slide-wrappers {
    display: none;
    justify-content: center;
    align-items: center;
}
.current-slide {
    display: flex;
    justify-content: center;
    align-items: center;
}

img {
    max-width: 100%;
    max-height: 100%;
    border-radius: 20px;
}
.card-containers {
    display: flex;
    flex-direction: column;
    row-gap: 50px;
    margin: 25px 0;
}
.card-items {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    row-gap: 15px;
}

#catalog-1-container .card-items {
margin: 25px 0;
}

#catalog-3-container .card-items {
    margin: 25px 0;

}




.customer-container h1 {
    margin-bottom: 25px;
}
.customer-container img {
    margin-top: 25px;
}
li {
    list-style-type: none;
}

#categorization-container h1:nth-of-type(2) {
    margin-bottom: 25px;

}
.functions-benefits-container h2 {
margin-bottom: 25px;
}
.functions-benefits-container h3 {
margin-top: 25px;
}
.functions-benefits-container .card-items{
    margin-bottom: 25px;
    }
.cost-effective-container h2 {
    margin-bottom: 25px;
}
.cost-effective-container h3 {
    margin-top: 25px;
}
.cost-effective-container .card-items {
    margin-bottom: 25px;
}









#microorganisms-container img {
    width: 80%;
    height: 80%;
}


    












.section-2-container {
    height: 30rem;
    background-color: white;
    /* opacity: 0.7; */
    color: rgB(16	23	40);	

    display: flex;
    justify-content: flex-end;
    align-items: center;
    display: none;
    
}
.section-2-image-container {
    position: relative;
width: 30vw;
height: 20vw;
left: 40px;

    

}
.section-2-image-container img {
    position: absolute;
width: 100%;
height: 100%;
    object-fit: cover;
    object-position: center;
    border-radius: 10 px 10px/ 120px;

}
.section-2-content {
display: flex;
flex-direction: column;
align-items: flex-end;
justify-content: center;
text-align: right;
padding: calc(4% + 3vw);
margin: 5% 0 5% 0;


}

.section-2-container .heading {
    font-size: var(--heading-font-size);
}

.section-2-container .sub-heading {
font-size: var(--xsub-heading-font-size);

}
.section-2-container .sub-heading+p {
color: var(--dark-font-color);
    font-size: var(--p-font-size);
opacity: var(--high-opacity);
    } 


    .section-3-container {
        height: 40rem;
        box-sizing: border-box;
        display: flex;
        justify-content: center;
        align-items: center;
    display: none;    

    }
.section-3-content-container {
    display: flex;
    flex-direction: column;
align-items: flex-start;
    justify-content: flex-start;
    margin-left: 5vw;
}
.section-3-content-container .heading {
    font-size: var(--heading-font-size);
}
.section-3-content-container .sub-heading {
    font-size: var(--sub-heading-font-size);
}



.section-3-content-container .paragraph {
font-size: var(--p-font-size);
opacity: var(--high-opacity);
}
.section-3-image-container {
    position: relative;
    /* width: 45vw;
    height: 28vw; */
width: 100%;
height: clamp(15vw,30vw, 45vw);


    margin-right: 5vw;
}

.section-3-image-container img {
position: absolute;
object-fit: cover;
object-position: center;
width: 100%;
height: 100%;
border-radius: 30%;
}

/* #amzymes-bg {
    background-color: #fff;
    margin-bottom: 200px;

} */

.amzymes-bg {
    background: repeat-x center/40% url('./assets/logo.JPG');
    height: 300px;
border-radius: 20%;
margin-bottom: 200px;
margin-top: 100px;

}

    .section-4-container {
        /* height: 800rem; */
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
row-gap: 100px;

    }
    .section-4-container .heading {
        font-size: var(--sub-heading-font-size);
    }

.card-container {
    position: relative;
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 100px;
}

.card {
    width: 80%;
    display: flex;
    
flex-wrap: nowrap;
    
}
@media (max-width: 780px) {
    .card {
        flex-direction: column;
        
    }
    .card .img-container {
        height: 40vw;
    }
}
@media (min-width: 781px) {
    .card {
        flex-direction: row;
    }
}

.card .img-container {
width: 64vw;
    height: auto;
display: flex;
justify-content: center;
align-items: center;
position: relative;
align-self: center;

}

.card img {
width: 100%;
height: 100%;
object-fit: contain;
object-position: center;
}

.card-content-container {
    display: flex;
    min-width: 66%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    row-gap: 25px;
    
    flex: 0 1 400px;
    
}
/* ... */

